--- a/dbconn.properties
+++ b/dbconn.properties
@@ -12,7 +12,7 @@ flightservice.url = jdbc:sqlserver://cse414sp2016.database.windows.net;database=
 
 # TODO: Please change SERVER_NAME to the url of your server.
 # TODO: Add your USERNAME
-flightservice.sqlazure_username = shengc5@cse414sp2016.database.windows.net
+flightservice.sqlazure_username = 
 
 # TODO: Add your PASSWORD
-flightservice.sqlazure_password = Shengchen0628
+flightservice.sqlazure_password = 
